--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
         </div>
 
 
+        <div class="process-proc paddingTop-type1 paddingBottom-type1">
+            <div class="inside">
+                <h2>Как мы работаем с клиентом?</h2>
+                <div class="process-line process-line-type2 nomobile"></div>
+                <img src="img/process/flag.png" alt="flag" width="91" height="91" class="process-flag">
+                <div class="process-begin nomobile"></div>
+            </div>
+        </div>
         <div class="process-pipes">
             <div class="inside">
                 <div class="process-pipesBg process-limit" data-session="1">
@@ -114,21 +122,22 @@
                     </div>
                     <div class="process-pipe process-limit-pointer">
                         <div class="pipe pipe-left pipe2"></div>
-                        <div class="pipe-text pipe-text-left">Мы просим заполнить форму брифа для нового проекта</div>
+                        <div class="pipe-text pipe-text-left">Мы отцениваем предварительную сумму ущерба по фотографиям</div>
                     </div>
                     <div class="process-pipe-inter process-limit-pointer">
                         <div class="pipe pipe-right pipe3"></div>
-                        <div class="pipe-text pipe-text-right">Созваниваемся по телефону и приглашаем клиента в офис</div>
+                        <div class="pipe-text pipe-text-right">Делаем собственную диагностику бесплатно</div>
                     </div>
                     <div class="process-pipe process-limit-pointer">
                         <div class="pipe pipe-left pipe4"></div>
-                        <div class="pipe-text pipe-text-left">Оцениваем, подходит ли наша квалификация для клиента</div>
+                        <div class="pipe-text pipe-text-left">Подписываем договор по выплате</div>
                     </div>
                     <div class="process-pipe-inter process-limit-pointer">
                         <div class="pipe pipe-right pipe5"></div>
-                        <div class="pipe-text pipe-text-right">Оцениваем, подходит ли клиент под нашу квалификацию</div>
+                        <div class="pipe-text pipe-text-right">Производим выплату</div>
                     </div>
-                    <div class="process-pipe process-limit-pointer">
+
+                    <!--div class="process-pipe process-limit-pointer">
                         <div class="pipe pipe-left pipe6"></div>
                         <div class="pipe-text pipe-text-left one-string">Пониманием цели и виденье клиента</div>
                     </div>
@@ -153,7 +162,7 @@
                     <div class="process-pipe-inter process-limit-pointer">
                         <div class="pipe pipe-right pipe11"></div>
                         <div class="pipe-text pipe-text-right">Получаем оплату за первую и вторую итерации</div>
-                    </div>
+                    </div-->
                     <div class="process-pipe-last process-limit-pointer">
                         <div class="pipe pipe-left pipe12"></div>
                         <div class="pipe-text pipe-text-left">Начинаем работать</div>
@@ -161,7 +170,6 @@
 
                     <div class="process-pipeBottom"></div>
                 </div>
-                <div class="process-showAll phonesOnly" data-session="1">Показать все</div>
             </div>
         </div>
 
