--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- css -->
     <link href="src/bootstrap.css" rel="stylesheet">
     <link href="src/style-v3.css" rel="stylesheet">
+    <link href="src/process.css" rel="stylesheet">
     <!--link href="src/jplayer.blue.monday.css" rel="stylesheet"-->
     <!--link href="src/1a01607fb5.css" media="all" rel="stylesheet"-->
     <link rel="stylesheet" href="src/media.css" media="all and (max-width: 900px)">
@@ -22,6 +23,7 @@
 
     <script src="src/jquery.min.js"></script>
     <script src="src/bootstrap.js"></script>
+    <script src="src/process.js"></script>
 
     <link rel="icon" href=​ "favicon.ico" type="image/x-icon">
 
@@ -107,9 +109,9 @@
 
         <div class="process-proc paddingTop-type1 paddingBottom-type1">
             <div class="inside">
-                <h2>Как мы работаем с клиентом?</h2>
+                <h2>Как мы работаем</h2>
                 <div class="process-line process-line-type2 nomobile"></div>
-                <img src="img/process/flag.png" alt="flag" width="91" height="91" class="process-flag">
+                <img src="src/flag.png" alt="flag" width="91" height="91" class="process-flag">
                 <div class="process-begin nomobile"></div>
             </div>
         </div>
@@ -126,15 +128,15 @@
                     </div>
                     <div class="process-pipe-inter process-limit-pointer">
                         <div class="pipe pipe-right pipe3"></div>
-                        <div class="pipe-text pipe-text-right">Делаем собственную диагностику бесплатно</div>
+                        <div class="pipe-text pipe-text-right">Делаем собственную экспертизу бесплатно и точно оцениваем ущерб</div>
                     </div>
                     <div class="process-pipe process-limit-pointer">
                         <div class="pipe pipe-left pipe4"></div>
-                        <div class="pipe-text pipe-text-left">Подписываем договор по выплате</div>
+                        <div class="pipe-text pipe-text-left">Заключаем договор, если нужно ведем дело с СК самостоятельно</div>
                     </div>
                     <div class="process-pipe-inter process-limit-pointer">
                         <div class="pipe pipe-right pipe5"></div>
-                        <div class="pipe-text pipe-text-right">Производим выплату</div>
+                        <div class="pipe-text pipe-text-right">Подписываем договор по выплате</div>
                     </div>
 
                     <!--div class="process-pipe process-limit-pointer">
@@ -165,7 +167,7 @@
                     </div-->
                     <div class="process-pipe-last process-limit-pointer">
                         <div class="pipe pipe-left pipe12"></div>
-                        <div class="pipe-text pipe-text-left">Начинаем работать</div>
+                        <div class="pipe-text pipe-text-left">Производим выплату</div>
                     </div>
 
                     <div class="process-pipeBottom"></div>
@@ -173,7 +175,7 @@
             </div>
         </div>
 
-        <div class="portfolio">
+        <div class="portfolio color">
             <div class="container" style="padding-bottom:40px">
                 <div class="col-md-6 col-md-offset-3 title">
                     <h2><span>Уже получили деньги</span></h2>
