--- a/index.html
+++ b/index.html
@@ -106,42 +106,48 @@
             </div>
         </div>
 
-
-        <div class="process-proc">
-            <h2>Как мы работаем</h2>
-            <div class="process-line process-line-type2 nomobile"></div>
-        </div>
-        <div class="inside">
-            <div class="process-pipesBg process-limit" data-session="1">
-                <div class="process-pipeTop process-limit-pointer">
-                    <div class="pipe pipe1"></div>
-                    <div class="pipe-text pipe-text-right">Клиент выходит с нами на связь, через сайт или по телефону</div>
+        <div>
+            <div class="portfolio color">
+                <div class="container">
+                    <div class="col-md-6 col-md-offset-3 title">
+                        <h2><span>Как мы работаем</span></h2>
+                    </div>
+                    <div class="inside hidden-md hidden-lg">
+                        123
+                    </div>
                 </div>
-                <div class="process-pipe process-limit-pointer">
-                    <div class="pipe pipe-left pipe7"></div>
-                    <div class="pipe-text pipe-text-left">Мы отцениваем предварительную сумму ущерба по фотографиям</div>
+            </div>
+            <div class="inside hidden-xs hidden-sm">
+                <div class="process-pipesBg process-limit" data-session="1">
+                    <div class="process-pipeTop process-limit-pointer">
+                        <div class="pipe pipe1"></div>
+                        <div class="pipe-text pipe-text-right">Клиент выходит с нами на связь, через сайт или по телефону</div>
+                    </div>
+                    <div class="process-pipe process-limit-pointer">
+                        <div class="pipe pipe-left pipe7"></div>
+                        <div class="pipe-text pipe-text-left">Мы отцениваем предварительную сумму ущерба по фотографиям</div>
+                    </div>
+                    <div class="process-pipe-inter process-limit-pointer">
+                        <div class="pipe pipe-right pipe8"></div>
+                        <div class="pipe-text pipe-text-right">Делаем собственную экспертизу бесплатно и точно оцениваем ущерб</div>
+                    </div>
+                    <div class="process-pipe process-limit-pointer">
+                        <div class="pipe pipe-left pipe2"></div>
+                        <div class="pipe-text pipe-text-left">Заключаем договор, если нужно ведем дело с СК самостоятельно</div>
+                    </div>
+                    <div class="process-pipe-inter process-limit-pointer">
+                        <div class="pipe pipe-right pipe10"></div>
+                        <div class="pipe-text pipe-text-right">Подписываем договор по выплате</div>
+                    </div>
+                    <div class="process-pipe-last process-limit-pointer">
+                        <div class="pipe pipe-left pipe11"></div>
+                        <div class="pipe-text pipe-text-left">Производим выплату</div>
+                    </div>
+                    <div class="process-pipeBottom"></div>
                 </div>
-                <div class="process-pipe-inter process-limit-pointer">
-                    <div class="pipe pipe-right pipe8"></div>
-                    <div class="pipe-text pipe-text-right">Делаем собственную экспертизу бесплатно и точно оцениваем ущерб</div>
-                </div>
-                <div class="process-pipe process-limit-pointer">
-                    <div class="pipe pipe-left pipe2"></div>
-                    <div class="pipe-text pipe-text-left">Заключаем договор, если нужно ведем дело с СК самостоятельно</div>
-                </div>
-                <div class="process-pipe-inter process-limit-pointer">
-                    <div class="pipe pipe-right pipe10"></div>
-                    <div class="pipe-text pipe-text-right">Подписываем договор по выплате</div>
-                </div>
-                <div class="process-pipe-last process-limit-pointer">
-                    <div class="pipe pipe-left pipe11"></div>
-                    <div class="pipe-text pipe-text-left">Производим выплату</div>
-                </div>
-
-                <div class="process-pipeBottom"></div>
             </div>
         </div>
-        </div>
+
 
         <div class="portfolio color">
             <div class="container">
