--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <link rel="stylesheet" href="src/media.css" media="all and (max-width: 900px)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="src/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="src/compiled.min.css" rel="stylesheet">
 
     <script src="src/jquery.min.js"></script>
     <script src="src/bootstrap.js"></script>
     <script src="src/process.js"></script>
+
 
     <link rel="icon" href=​ "favicon.ico" type="image/x-icon">
 
@@ -111,6 +113,7 @@
                 <div class="container">
                     <div class="col-md-6 col-md-offset-3 title">
                         <h2><span>Как мы работаем</span></h2>
+                        <div class="title-line"></div>
                     </div>
                     <div class="inside hidden-md hidden-lg">
                         123
@@ -153,7 +156,7 @@
             <div class="container">
                 <div class="col-md-6 col-md-offset-3 title">
                     <h2><span>Уже получили деньги</span></h2>
-                    <br>
+                    <div class="title-line"></div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12">
                     <wrapper>
@@ -310,7 +313,10 @@
 
         <div class="white">
             <div class="container">
-                <h2 class="h2 text-center">Свидетельства и сертификаты</h2>
+                <div class="col-md-6 col-md-offset-3 title">
+                    <h2><span>Документы</span></h2>
+                    <div class="title-line"></div>
+                </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-12 thumb">
                         <a data-fancybox="gallery" href="src/sert1.jpg">
@@ -336,6 +342,7 @@
                 <div class="col-md-6 col-md-offset-3 title">
                     <h2><strong>Компания в цифрах</strong>
                     </h2>
+                    <div class="title-line"></div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="row text-center padding_num_comp">
@@ -358,9 +365,15 @@
 
         <div class="white">
             <div class="container">
-                <h2 class="h2 text-center">Наш адрес</h2>
+                <div class="col-md-6 col-md-offset-3 title">
+                    <h2><strong>Наш адрес</strong>
+                    </h2>
+                    <div class="title-line"></div>
+                </div>
                 <div class="row">
-                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af384447fcfe6aef571f838e6b1af12dc2f8690992812fd210347c03850675275&amp;width=100%25&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af384447fcfe6aef571f838e6b1af12dc2f8690992812fd210347c03850675275&amp;width=100%25&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
+                    </div>
                 </div>
             </div>
         </div>
@@ -369,12 +382,60 @@
 
     </section>
 
-    <footer>
+    <!--footer>
         <div class="text-center copyright">«РусЭксперт» © 2011 -
             <script type="text/javascript">
                 document.write(new Date().getFullYear());
             </script>. Все права защищены.</div>
+    </footer-->
+
+    <!--Footer-->
+    <footer class="page-footer font-small myRed pt-0">
+
+        <!--Footer Links-->
+        <div class="footer_container">
+
+            <!--First row-->
+            <div class="footer_row">
+
+                <!--First column-->
+                <div class="col-md-12 py-5">
+
+                    <div class="mb-5 flex-center">
+                        <a>
+                            <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x fivons"> </i>
+                        </a>
+                        <a>
+                            <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x fivons"> </i>
+                        </a>
+                        <a>
+                            <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x fivons"> </i>
+                        </a>
+                        <a>
+                            <i class="fa fa-vk fa-lg white-text mr-md-5 mr-3 fa-2x fivons"> </i>
+                        </a>
+                    </div>
+                </div>
+                <!--/First column-->
+            </div>
+            <!--/First row-->
+        </div>
+        <!--/Footer Links-->
+
+        <!--Copyright-->
+        <div class="footer-copyright py-3 text-center">
+            «РусЭксперт» © 2011 -
+            <script type="text/javascript">
+                document.write(new Date().getFullYear());
+            </script>. Все права защищены.</div>
+        </div>
+
     </footer>
+    <!--/Footer-->
+
+
+
+
     <a href="/#top" class="scrollup" style="opacity: 0;"><i class="fa fa-angle-up active"></i></a>
     <!-- Modal -->
     <!-- Modal ЗАЯВКА ОБРАТНОЙ СВЯЗИ-->
