--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="src/process.js"></script>
 
 
-    <link rel="icon" href=​ "favicon.ico" type="image/x-icon">
+    <link rel="icon" href="​favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -75,7 +75,7 @@
                 <!--h1 class="text-center"><strong>Получите страховое возмещение после ДТП по ОСАГО или КАСКО</strong>
                     <p class="h2 text-center">через 24 часа после нашей бесплатной экспресс-оценки</p-->
                 <div class="image">
-                    <div class="row">
+                    <div class="row money24">
                         <div class="col-sm-7 col-md-7 col-lg-7 text-right"></div>
                         <div class="col-sm-4 col-md-5 col-lg-5 text-left">
                             <h2><a data-toggle="modal" data-target="#mySignup">Деньги через 24 часа</a></h2>
@@ -83,12 +83,12 @@
                                 <br> — Предварительная оценка по интернету
                                 <br> — Бесплатная диагностика
                             </p>
-                            <a class="btn btn-gray" data-toggle="modal" data-target="#mySignup">
+                            <a class="btn btn-primary" data-toggle="modal" data-target="#mySignup">
                                 <i class="fa fa-caret-left" aria-hidden="true"></i> Получить выплату <i class="fa fa-caret-right" aria-hidden="true"></i>
                             </a>
                         </div>
                     </div>
-                    <div class="row">
+                    <!--div class="row">
                         <div class="col-sm-7 col-md-7 col-lg-7 text-right"></div>
                         <div class="col-sm-4 col-md-5 col-lg-5 text-left">
                             <p>
@@ -102,7 +102,7 @@
                                 </a>
                             </p>
                         </div>
-                    </div>
+                    </div-->
                     <p class="text-center"><strong></strong></p>
                 </div>
             </div>
@@ -355,7 +355,7 @@
                             <p class="h5 companyInFigure_desc">сотрудников<br>компании</p>
                         </div>
                         <div class="col-sm-4 col-md-4 col-lg-4">
-                            <h3>100 000</h3>
+                            <h3>100 000+</h3>
                             <p class="h5 companyInFigure_desc">довольных клиентов<br>по всей стране</p>
                         </div>
                     </div>
