--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="src/jquery.min.js"></script>
     <script src="src/bootstrap.js"></script>
     <script src="src/process.js"></script>
+    <script src="src/etc.js"></script>
 
 
     <link rel="icon" href="​favicon.ico" type="image/x-icon">
