--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <script src="src/bootstrap.js"></script>
     <script src="src/process.js"></script>
     <script src="src/etc.js"></script>
-
-
-    <link rel="icon" href="​favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -78,7 +76,7 @@
                 <div class="image">
                     <div class="row money24">
                         <div class="col-sm-7 col-md-7 col-lg-7 text-right"></div>
-                        <div class="col-sm-4 col-md-5 col-lg-5 text-left">
+                        <div class="col-sm-4 col-md-5 col-lg-5 text-left mobile-center">
                             <h2><a data-toggle="modal" data-target="#mySignup">Деньги через 24 часа</a></h2>
                             <p>— Выплата без обращений в страховую
                                 <br> — Предварительная оценка по интернету
@@ -109,7 +107,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="hidden-xs hidden-sm">
             <div class="portfolio color">
                 <div class="container">
                     <div class="col-md-6 col-md-offset-3 title">
@@ -212,13 +210,13 @@
             </div>
         </div>
 
-        <div class="white">
+        <!--div class="white">
             <div class="container">
                 <div class="col-sm-8 col-md-8 col-lg-8 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 title">
                     <h2><span>Как воспользоваться нашими услугами?</span></h2>
                     <p>С проектом «РусЭксперт» процесс выплаты возмещения стал проще и быстрее: получить свои деньги можно за 24 часа.</p>
                 </div>
-                <div class="col-sm-8 col-md-7 col-lg-7 right column" style="height: 494px;">
+                <div class="col-sm-8 col-md-7 col-lg-7 right column">
                     <h4><a data-target="#mySignup" data-toggle="modal">Оставьте заявку</a></h4>
                     <p>Вы можете как самостоятельно сфотографировать свой автомобиль и прислать нам фотографии, так и подъехать к нам в офис в удобное для вас время.
                     </p>
@@ -227,7 +225,7 @@
                     <h4>Подпишите договор</h4>
                     <p>И езжайте в ремонт. Или получите выплату наличными, если вы выбрали этот вариант. Дату начала ремонта вы можете самостоятельно согласовать с СТОА. Например, оставить автомобиль в ремонте на время отпуска.</p>
                 </div>
-                <div class="col-sm-4 col-md-5 col-lg-5 left column inthemiddle" style="height: 494px;">
+                <div class="col-sm-4 col-md-5 col-lg-5 left column inthemiddle">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
@@ -237,18 +235,18 @@
                                 <br>
                                 <br>
                                 <p>Свяжитесь с нами: <a href="mailto:suinegne@gmail.com" class="contact">urexpert-ufa@yandex.ru</a></p>
-                                <!--a href="viber://forward?text=my_domain.ru+79219304728" class="icon"><img src="src/viber.png" alt="Viberl"></a>
+                                <!- -a href="viber://forward?text=my_domain.ru+79219304728" class="icon"><img src="src/viber.png" alt="Viberl"></a>
                             <a href="https://telegram.me/share/url?url=my_domain.ru&amp;text=+79219304728" class="icon"><img src="src/telegram_logo.png" alt="Telegram"></a>
-                            <a href="whatsapp://send?text=my_domain.ru+79219304728" data-action="share/whatsapp/share" class="icon"><img src="src/whatsapp.png" alt="WhatsApp"></a-->
+                            <a href="whatsapp://send?text=my_domain.ru+79219304728" data-action="share/whatsapp/share" class="icon"><img src="src/whatsapp.png" alt="WhatsApp"></a- - >
                             </div>
                         </div>
                     </div>
 
                 </div>
             </div>
-        </div>
+        </div-->
 
-        <div class="color">
+        <div class="color hidden-xs hidden-sm">
             <div class="container">
                 <div class="col-md-6 col-md-offset-3 title">
                     <h2><span>Новый уровень сервиса</span><br>в урегулировании убытков после ДТП</h2>
