--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="src/jquery.fancybox.min.css" rel="stylesheet">
     <link href="src/compiled.min.css" rel="stylesheet">
+    <link href="src/form.css" rel="stylesheet">
 
     <script src="src/jquery.min.js"></script>
     <script src="src/bootstrap.js"></script>
@@ -210,42 +211,6 @@
             </div>
         </div>
 
-        <!--div class="white">
-            <div class="container">
-                <div class="col-sm-8 col-md-8 col-lg-8 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 title">
-                    <h2><span>Как воспользоваться нашими услугами?</span></h2>
-                    <p>С проектом «РусЭксперт» процесс выплаты возмещения стал проще и быстрее: получить свои деньги можно за 24 часа.</p>
-                </div>
-                <div class="col-sm-8 col-md-7 col-lg-7 right column">
-                    <h4><a data-target="#mySignup" data-toggle="modal">Оставьте заявку</a></h4>
-                    <p>Вы можете как самостоятельно сфотографировать свой автомобиль и прислать нам фотографии, так и подъехать к нам в офис в удобное для вас время.
-                    </p>
-                    <h4>Примите решение</h4>
-                    <p>Мы не станем настаивать и торопить вас. Примите взвешенное решение - ознакомьтесь с примерами выплат, получить компенсацию ущерба наличными деньгами. Когда будете готовы, приезжайте на подписание договора.</p>
-                    <h4>Подпишите договор</h4>
-                    <p>И езжайте в ремонт. Или получите выплату наличными, если вы выбрали этот вариант. Дату начала ремонта вы можете самостоятельно согласовать с СТОА. Например, оставить автомобиль в ремонте на время отпуска.</p>
-                </div>
-                <div class="col-sm-4 col-md-5 col-lg-5 left column inthemiddle">
-                    <div class="col-sm-12 col-md-12 col-lg-12">
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                                <br>
-                                <a class="btn btn-primary btn-lg" data-toggle="modal" data-target="#mySignup">Заказать звонок</a>
-                                <br>
-                                <br>
-                                <br>
-                                <p>Свяжитесь с нами: <a href="mailto:suinegne@gmail.com" class="contact">urexpert-ufa@yandex.ru</a></p>
-                                <!- -a href="viber://forward?text=my_domain.ru+79219304728" class="icon"><img src="src/viber.png" alt="Viberl"></a>
-                            <a href="https://telegram.me/share/url?url=my_domain.ru&amp;text=+79219304728" class="icon"><img src="src/telegram_logo.png" alt="Telegram"></a>
-                            <a href="whatsapp://send?text=my_domain.ru+79219304728" data-action="share/whatsapp/share" class="icon"><img src="src/whatsapp.png" alt="WhatsApp"></a- - >
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div-->
-
         <div class="color hidden-xs hidden-sm">
             <div class="container">
                 <div class="col-md-6 col-md-offset-3 title">
@@ -358,6 +323,49 @@
                             <p class="h5 companyInFigure_desc">довольных клиентов<br>по всей стране</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="white">
+            <div class="container">
+                <div class="col-sm-8 col-md-8 col-lg-8 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 title">
+                    <h2><span>Бесплатная консультация</span></h2>
+                    <p>Мы перезвоним вам через 5 минут и подробно проконсультируем</p>
+                </div>
+                <div class="col-md-6 col-md-offset-3 ">
+
+                    <form enctype="multipart/form-data" method="post" id="feedback-form">
+                        <label for="nameFF">Имя:</label>
+                        <input type="text" name="nameFF" id="nameFF" required placeholder="например, Иван Иванович Иванов" x-autocompletetype="name" class="w100 border">
+                        <label for="contactFF">Email:</label>
+                        <input type="email" name="contactFF" id="contactFF" required placeholder="например, ivan@yandex.ru" x-autocompletetype="email" class="w100 border">
+                        <label for="fileFF">Прикрепить файлы:</label>
+                        <input type="file" name="fileFF[]" multiple id="fileFF" class="w100">
+                        <label for="messageFF">Сообщение:</label>
+                        <textarea name="messageFF" id="messageFF" required rows="5" placeholder="Детали заявки…" class="w100 border"></textarea>
+                        <br>
+                        <input value="Отправить" type="submit" id="submitFF">
+                    </form>
+
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                                <br>
+                                <a class="btn btn-primary btn-lg" data-toggle="modal" data-target="#mySignup">Заказать звонок</a>
+                                <br>
+                                <br>
+                                <br>
+                                <p>Свяжитесь с нами: <a href="mailto:suinegne@gmail.com" class="contact">urexpert-ufa@yandex.ru</a></p>
+                                <!--a href="viber://forward?text=my_domain.ru+79219304728" class="icon"><img src="src/viber.png" alt="Viberl"></a>
+                                <a href="https://telegram.me/share/url?url=my_domain.ru&amp;text=+79219304728" class="icon"><img src="src/telegram_logo.png" alt="Telegram"></a>
+                                <a href="whatsapp://send?text=my_domain.ru+79219304728" data-action="share/whatsapp/share" class="icon"><img src="src/whatsapp.png" alt="WhatsApp"></a-->
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
