Revert "форма готова"
This reverts commit 0335f9cab644e12295af5d012d4675601832e40e.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                                 <br> — Предварительная оценка по интернету
                                 <br> — Бесплатная диагностика
                             </p>
-                            <a href="#calc" class="btn btn-primary">
-                                <i class="fa fa-caret-left" aria-hidden="true"></i> Расчитать выплату <i class="fa fa-caret-right" aria-hidden="true"></i>
+                            <a class="btn btn-primary" data-toggle="modal" data-target="#mySignup">
+                                <i class="fa fa-caret-left" aria-hidden="true"></i> Получить выплату <i class="fa fa-caret-right" aria-hidden="true"></i>
                             </a>
                         </div>
                     </div>
@@ -349,26 +349,43 @@
 
         <div class="white">
             <div class="container">
-                <div class="col-md-6 col-md-offset-3 title">
+                <div class="col-sm-8 col-md-8 col-lg-8 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 title">
                     <h2><span>Бесплатная консультация</span></h2>
-                    <a name="calc"></a>
-                    <div class="title-line"></div>
+                    <p>Мы перезвоним вам через 5 минут и подробно проконсультируем</p>
                 </div>
                 <div class="col-md-6 col-md-offset-3 ">
-                    <p class="text-center">Мы перезвоним вам через 5 минут и подробно проконсультируем</p>
-                    <form enctype="multipart/form-data" method="post" id="feedback-form" class="text-center">
-                        <h3 class="text-center">Расчитать выплату</h3>
+
+                    <form enctype="multipart/form-data" method="post" id="feedback-form">
                         <label for="nameFF">Имя:</label>
                         <input type="text" name="nameFF" id="nameFF" required placeholder="например, Иван Иванович Иванов" x-autocompletetype="name" class="w100 border">
-                        <label for="contactFF">Телефон:</label>
-                        <input type="text" name="contactFF" id="contactFF" required placeholder="например, 9221230011" x-autocompletetype="email" class="w100 border">
-                        <label for="fileFF">Фото:</label>
+                        <label for="contactFF">Email:</label>
+                        <input type="email" name="contactFF" id="contactFF" required placeholder="например, ivan@yandex.ru" x-autocompletetype="email" class="w100 border">
+                        <label for="fileFF">Прикрепить файлы:</label>
                         <input type="file" name="fileFF[]" multiple id="fileFF" class="w100">
                         <label for="messageFF">Сообщение:</label>
                         <textarea name="messageFF" id="messageFF" required rows="5" placeholder="Детали заявки…" class="w100 border"></textarea>
                         <br>
-                        <input value="Отправить" type="submit" id="submitFF" class="btn btn-primary">
+                        <input value="Отправить" type="submit" id="submitFF">
                     </form>
+
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                                <br>
+                                <a class="btn btn-primary btn-lg" data-toggle="modal" data-target="#mySignup">Заказать звонок</a>
+                                <br>
+                                <br>
+                                <br>
+                                <p>Свяжитесь с нами: <a href="mailto:suinegne@gmail.com" class="contact">urexpert-ufa@yandex.ru</a></p>
+                                <!--a href="viber://forward?text=my_domain.ru+79219304728" class="icon"><img src="src/viber.png" alt="Viberl"></a>
+                                <a href="https://telegram.me/share/url?url=my_domain.ru&amp;text=+79219304728" class="icon"><img src="src/telegram_logo.png" alt="Telegram"></a>
+                                <a href="whatsapp://send?text=my_domain.ru+79219304728" data-action="share/whatsapp/share" class="icon"><img src="src/whatsapp.png" alt="WhatsApp"></a-->
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -386,8 +403,6 @@
                     </div>
                 </div>
             </div>
-
-        </div>
         </div>
 
 
@@ -430,7 +445,6 @@
                 </div>
                 <!--/First column-->
             </div>
-            <p class="text-center">E-mail: <a href="mailto:suinegne@gmail.com" class="contact">urexpert-ufa@yandex.ru</a></p>
             <!--/First row-->
         </div>
         <!--/Footer Links-->
@@ -440,12 +454,12 @@
             «РусЭксперт» © 2011 -
             <script type="text/javascript">
                 document.write(new Date().getFullYear());
-            </script>. Все права защищены.
-        </div>
+            </script>. Все права защищены.</div>
         </div>
 
     </footer>
     <!--/Footer-->
+
 
 
 
