--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         <label for="fileFF">Прикрепить файлы:</label>
                         <input type="file" name="fileFF[]" multiple id="fileFF" class="w100">
                         <label for="messageFF">Сообщение:</label>
-                        <textarea name="messageFF" id="messageFF" required rows="5" placeholder="Детали заявки…" class="w100 border"></textarea>
+                        <textarea name="messageFF" id="messageFF" rows="5" placeholder="Детали заявки…" class="w100 border"></textarea>
                         <br>
                         <input value="Отправить" type="submit" id="submitFF">
                     </form>
